--- a/mobile/yoseph_ephrem/pubspec.yaml
+++ b/mobile/yoseph_ephrem/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   google_fonts: ^6.1.0
   intl: ^0.18.1
   provider: ^6.0.3
+  equatable: ^2.0.5
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
